--- a/index.html
+++ b/index.html
@@ -32,18 +32,25 @@
         </article>
 
         <article>
-            <h2>A transatlantic flight may turn Saharan dust into a key ocean nutrient</h2>
+            <h2>Google to develop AI that takes over computers, The Information reports</h2>
             <img src="https://www.reuters.com/resizer/v2/I3WWQHWNQVMJRMAD6E5N6O3YJE.jpg?auth=9a265be5ba2727ee3849029e77bc4c2cd1b3d084f02f15618e7813bd9e23a815&width=1200&quality=80" alt="Artificial intelligence">
             <a href="https://www.reuters.com/technology/artificial-intelligence/google-develop-ai-that-takes-over-computers-information-reports-2024-10-26/">Article link here </a>
             <time> october 26, 2024</time>
             <p> Alphabet's (GOOGL.O), opens new tab Google is developing artificial intelligence technology that takes over a web browser to complete tasks such as research and shopping, The Information reported on Saturday.</p>
         </article>
         <article>
-            <h2>A transatlantic flight may turn Saharan dust into a key ocean nutrient</h2>
+            <h2>Super Micro shares fall as server maker misses sales targets, annual filing uncertain</h2>
             <img src="https://www.reuters.com/resizer/v2/LMK6CQA3JRPVDBWYR2HS4MWGUU.jpg?auth=9ec83c3de7fb1a70269a5d49eebae59c97cfea0b384cd8ee70e7d1fe67305ad0&width=1080&quality=80"alt="super micro computer">
             <a href="https://www.reuters.com/technology/super-micro-says-cannot-predict-timing-annual-filing-shares-down-2024-11-05/">Article link here </a>
             <time> november 5, 2024</time>
             <p> "Supermicro" generally refers to Super Micro Computer, Inc., a prominent company in high-performance and high-efficiency server technology, data storage, and IT infrastructure solutions. Supermicro is known for manufacturing a wide range of computing hardware products, including servers, motherboards, and server management solutions designed for cloud computing, enterprise IT, AI, and IoT environmen</p>
+        </article>
+        <article>
+            <h2>Revolutionary Bioelectronic Gel Brings Living Tissue and Technology Closer Than Ever</h2>
+            <img src="https://scitechdaily.com/images/Hydrogel-Semiconductor-on-Hand-scaled.jpg"alt="revolutionary-bioelectronic-gel">
+            <a href="https://scitechdaily.com/revolutionary/">Article link here </a>
+            <time> november 12, 2024</time>
+            <p> A groundbreaking bioelectronic gel now enables closer integration of living tissue and technology, promising advancements in medical implants, prosthetics, and regenerative therapies.</p>
         </article>
     </main>
    
