--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
             <a href="https://scitechdaily.com/revolutionary/">Article link here </a>
             <time> november 12, 2024</time>
             <p> A groundbreaking bioelectronic gel now enables closer integration of living tissue and technology, promising advancements in medical implants, prosthetics, and regenerative therapies.</p>
+        </article> 
+        <article>
+            <h2>Microsoft launches two data center infrastructure chips to speed AI applications</h2>"
+            <img src="https://www.reuters.com/resizer/v2/V4L7QHX2ZZINRNNA2FQ56YFCFM.jpg?auth=6c65459b42f0bfe0985a9f589b5c3d58fb7c31212f2e2f630debdb7ff853d7af&width=1080&quality=80" alt="microsoft">
+            <a href="https://www.reuters.com/technology/artificial-intelligence/microsoft-launches-two-data-center-infrastructure-chips-speed-ai-applications-2024-11-19/">Article link here </a>
+            <time> november 19, 2024</time>
+            <p> Microsoft has launched two custom data center chips, Maia 100 and Cobalt 100, aimed at enhancing AI applications. The Maia 100 AI Accelerator optimizes large-scale AI workloads, while the Cobalt 100 CPU, based on ARM architecture, prioritizes energy efficiency and performance. These chips are part of a broader effort to align hardware and software for better AI efficiency and sustainability in Microsoft Azure</p>
         </article>
     </main>
    
